# git-series

./: .gitignore  .pre-commit-config.yaml  README.md  cmd.sh  requirements.txt  sample.conf  setup.cfg  tox.ini
gitseries/: __main__.py  executor.py  git.py  opts.py
gitseries/cmds/: base.py  create.py  update.py
