[metadata]
name = niet
home-page = https://github.com/openuado/niet/
summary = Shell config file parser (json, yaml)
description-file = 
    README.md
author = openuado
author-email = herveberaud.pro@gmail.com
license = MIT
python-requires = >=3.6
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    gitseries

[entry_points]
console_scripts =
    git-series = gitseries.__main__:main
gitseries.cmds =
    create = gitseries.cmds.create:Create
    update = gitseries.cmds.update:Update

[wheel]
universal = 1
